# data_migration_tool

./: .gitignore  INSTALL.md  QUICKSTART.md  README.md  README_CODEBASE.md  __init__.py  base_interfaces.py  bcp_exporter.py  config.example.yaml  config_csv_import.yaml  config_loader.py  csv_importer_handler.py  examples.py  flatfile_handler.py  gpkg_handler.py  migrate.py  migration_processor.py  mssql_adapter.py  mssql_exporter.py  postgres_adapter.py  postgres_loader.py  pyproject.toml  requirements.txt  run_migration.bat  schema_extractor.py  status_tracker.py  tui_app.py  unified_processor.py
